--- a/src/styles/partials/_header.sass
+++ b/src/styles/partials/_header.sass
@@ -2,7 +2,7 @@
 
 // Header styles
 header.Header
-    width: 100%
+    width: 100vw
     grid-area: head
     display: flex
     flex-flow: row nowrap
