--- a/src/styles/partials/_responsive.sass
+++ b/src/styles/partials/_responsive.sass
@@ -1,7 +1,7 @@
 @use "variables"
 //small mobile screen width 320px
 img
-    width: calc(100% - (variables.$margin-double))
+    width: calc(100vw - (variables.$margin-double))
     max-width: calc(600px - variables.$margin-double)
 
 // Responsive styles
